<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spider Web</string>
    
    <!-- quit menu -->
    <string name="quit_game_dialog_title">Quit Game</string>
	<string name="quit_game_dialog_ok">Quit</string>
	<string name="quit_game_dialog_cancel">Cancel</string>
	<string name="quit_game_dialog_message">Return to main menu?</string>
	
	<!-- main menu -->
	<string name="main_newGameButton">New Game</string>
	<string name="main_continueGameButton">Continue Game</string>
	<string name="main_optionsButton">Options</string>
	<string name="main_quitButton">Exit</string>
	
	<!-- pause menu -->
	<string name="pausedMenuText">PAUSED</string>
	<string name="pause_resumeButton">Resume</string>
	<string name="pause_restartButton">Restart</string>
	<string name="pause_optionsButton">Options</string>
	<string name="pause_quitButton">Exit</string>
	
	<!-- game over menu -->
	<string name="gameOverMenuText">GAME OVER</string>
	<string name="gameOver_restartButton">Try again</string>
	<string name="gameOver_quitButton">Exit</string>
	<string name="gameOver_death">Player died</string>
	<string name="gameOver_timeout">Time expired</string>
	<string name="victory_surface">The required surface has been captured</string>
	<string name="victory_spiderTrapped">The bat has been trapped inside the spider web</string>
	
	<!-- victory screen -->
	<string name="victory_screen_title">Congratulations!</string>
	<string name="game_results_surface_claimed">Claimed surface:</string>
	<string name="game_results_total_score">Score:</string>
	<string name="game_results_total_play_time">Total play time:</string>
	<string name="victory_screen_exit_button">Main menu</string>
	<string name="victory_screen_restart_button">Replay</string>
	<string name="victory_screen_next_level_button">Next level</string>
    
</resources>
