<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
		android:layout_width="fill_parent"
  		android:layout_height="fill_parent" 
  		xmlns:android="http://schemas.android.com/apk/res/android" android:background="#FFFFFF">
	<ImageView 
          android:id="@+id/victoryBackground"
          android:src="@drawable/victory_background"
          android:adjustViewBounds="true"
          android:scaleType="fitXY"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent" 
          android:gravity="right" 
          android:tint="#88FFFFFF"/>	
          
	<LinearLayout 
	    android:orientation="vertical" 
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent" 
	    android:padding="5sp">
	    
	    <TextView
	    	android:id="@+id/victoryScreenTitle" 
	    	android:text="@string/victory_screen_title" 
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content" 
	    	android:textSize="40dp"  
	    	android:layout_gravity="center_horizontal" 
	    	android:textColor="#ffffff" 
	    	android:textStyle="bold" />
	    
	    <TextView  
	    	android:id="@+id/victoryScreenDescription"
	    	android:text="TODO"
	        android:layout_height="wrap_content" 
	        android:layout_width="wrap_content" 
	        android:layout_gravity="center_horizontal"  
	        android:textColor="#ffffff"
	        android:textSize="32dp"
	        android:textStyle="bold" />   
	    
	    <!-- Claimed surface -->
		<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
				<TextView android:id="@+id/game_results_surface_claimed" android:text="@string/game_results_surface_claimed" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:textSize="20dp"/>
				<view 
					class = "com.killerappzz.spider.menus.VictoryActivity$IncrementingTextView"
					android:id ="@+id/surface_percent" 
					android:text="100%" 
					android:layout_height="wrap_content" 
					android:layout_width="fill_parent" 
					android:textSize="20dp" 
					android:layout_gravity="right|center_vertical"
					android:textColor="#000000" 
					android:gravity="right"/>
		</LinearLayout>
		
		<!-- Total score -->
		<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:id="@+id/game_results_total_score" android:text="@string/game_results_total_score" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:textSize="20dp"/>
			<view 				
				class = "com.killerappzz.spider.menus.VictoryActivity$IncrementingTextView"
				android:id ="@+id/total_score" 
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent" 
				android:layout_gravity="right|center_vertical"
				android:textColor="#000000"  
				android:gravity="right" 
				android:text="0" 
				android:textSize="20dp"/>
		</LinearLayout>
		
		<!-- Total play time -->
		<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:id="@+id/game_results_total_play_time" android:text="@string/game_results_total_play_time" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:textSize="20dp"/>
			<view 
				class = "com.killerappzz.spider.menus.VictoryActivity$IncrementingTextView"
				android:id ="@+id/total_play_time" 
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent" 
				android:textSize="20dp" 
				android:layout_gravity="right|center_vertical"
				android:textColor="#000000" 
				android:gravity="right" 
				android:text="3:21:34"/>
		</LinearLayout>
		
		<!-- control buttons at the bottom -->
		<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="bottom|center_vertical">
			<Button android:id ="@+id/victoryScreen_exit" android:text="@string/victory_screen_exit_button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" />
			<Button android:id ="@+id/victoryScreen_restart" android:text="@string/victory_screen_restart_button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" />
			<Button android:id ="@+id/victoryScreen_nextLevel" android:text="@string/victory_screen_next_level_button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" />
		</LinearLayout>
		
	</LinearLayout>
</FrameLayout>