<?xml version="1.0" encoding="utf-8"?>  
<FrameLayout
		android:layout_width="wrap_content"
  		android:layout_height="wrap_content" 
  		xmlns:android="http://schemas.android.com/apk/res/android">
  	
  	<TextView  
    	android:id="@+id/gameOverMenuText"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:layout_gravity="center_vertical"  
        android:text="@string/gameOverMenuText"
        android:textColor="#ffffff"
        android:textSize="32dp"
        android:shadowColor="#000000"  
       	android:shadowRadius="2"  
       	android:shadowDx="1"  
       	android:shadowDy="1"   
	    />
	    
    <TextView  
    	android:id="@+id/gameOverMenuDescription"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:layout_gravity="center_vertical"  
        android:text="TODO"
        android:textColor="#ffffff"
        android:textSize="24dp"
        android:shadowColor="#000000"  
       	android:shadowRadius="2"  
       	android:shadowDx="1"  
       	android:shadowDy="1"   
    	/> 
    	
	<LinearLayout
	   		android:id="@+id/gameOverMenu"
	     	android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			xmlns:android="http://schemas.android.com/apk/res/android"
	     	android:orientation="vertical"
	     	android:gravity="bottom">
	     	
	    <Button
	        android:id="@+id/gameOver_restartButton"
	        android:text="@string/gameOver_restartButton"
	        android:textSize="18dp"
	        android:shadowColor="#347C17"  
	       	android:shadowRadius="1.5"  
	       	android:shadowDx="1"  
	       	android:shadowDy="1"  
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:paddingTop="10dp"
	        android:background="@layout/mainmenu_item" />
	    
	    <Button
	        android:id="@+id/gameOver_quitButton"
	        android:text="@string/gameOver_quitButton"
	        android:textSize="18dp"
	        android:shadowColor="#347C17"  
	       	android:shadowRadius="1.5"  
	       	android:shadowDx="1"  
	       	android:shadowDy="1"  
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:paddingTop="10dp"
	        android:background="@layout/mainmenu_item" />     
	 </LinearLayout>
 </FrameLayout>